# fugue

./: .editorconfig  .gitignore  AGENTS.md  AUDIT-2026-07.md  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-APACHE  Makefile  README.md  rustfmt.toml
.devcontainer/: Dockerfile  devcontainer.json  postCreate.sh
.github/: CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  DOCUMENTATION.md  LICENSE.md  MODULE_README_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  rfc.md
.github/PULL_REQUEST_TEMPLATE/: adr.md  rfc.md
.github/templates/: MODULE_README.md
.github/workflows/: ci-develop.yml  ci.yml  coverage.yml  docs.yml  publish.yml
benches/: AGENTS.md  f_perf.rs  mcmc_benchmarks.rs  memory_benchmarks.rs  sequence_vec.rs
crates/fugue-wasm/: Cargo.toml
crates/fugue-wasm/src/: dsl.rs  grid.rs  hmc.rs  lib.rs  mh.rs  pf.rs  smc.rs
crates/fugue-wasm/tests/: wasm.rs
docs/: AGENTS.md  Cargo.toml  README.md  book.toml  fugue-viz.css  fugue-viz.js  fugue-wasm-loader.js  index.html  mermaid-init.js
docs/.meta/: doc_style_guide.md  module_readme_template.md
docs/api/core/: README.md
docs/api/core/address/: README.md  addr.md  address.md
docs/api/core/distribution/: README.md  clone_box.md  distribution.md  log_prob.md  sample.md
docs/api/core/model/: README.md  and_then.md  bind.md  factor.md  guard.md  map.md  model.md  model_ext.md  observe.md  pure.md  sample.md  sequence_vec.md  traverse_vec.md  zip.md
docs/api/core/numerical/: README.md  log1p_exp.md  log_gamma.md  log_sum_exp.md  normalize_log_probs.md  safe_ln.md  weighted_log_sum_exp.md
docs/api/error/: README.md  invalid_params.md  numerical_error.md  trace_error.md
docs/api/inference/: README.md
docs/api/macros/: README.md  plate.md  prob.md  scoped_addr.md
docs/api/runtime/: README.md  trace.md
docs/api/runtime/handler/: README.md  handler.md  run.md
docs/api/runtime/interpreters/: README.md  prior_handler.md  replay_handler.md  safe_replay_handler.md  safe_score_given_trace.md  score_given_trace.md
docs/api/runtime/memory/: README.md  cow_trace.md  pool_stats.md  trace_builder.md  trace_pool.md
docs/api/runtime/trace/: README.md  choice.md  choice_value.md  insert_choice.md  total_log_weight.md  trace.md
docs/decisions/: README.md
docs/decisions/adr/: 000-template.md
docs/decisions/rfc/: 000-template.md
docs/getting-started/: basic-inference.md  installation.md
docs/how-to/: using-macros.md
docs/src/: SUMMARY.md  api-reference.md  home.md  index.md  notes.md  playground.md
docs/src/explorables/: README.md  anatomy.md  distributions.md  hmc.md  metropolis.md  monad.md  smc.md
docs/src/getting-started/: README.md  basic-inference.md  installation.md  understanding-models.md  your-first-model.md
docs/src/how-to/: README.md  building-complex-models.md  custom-handlers.md  debugging-models.md  optimizing-performance.md  production-deployment.md  trace-manipulation.md  working-with-distributions.md
docs/src/tutorials/: README.md  advanced-inference.md  basic-inference.md  bayesian-coin-flip.md  hierarchical-models.md  linear-regression.md  mixture-models.md  simple-mixtures.md  trace-manipulation.md  type-safety-features.md
docs/src/tutorials/advanced-applications/: README.md  advanced-inference.md  (+2 more)
docs/tutorials/: hierarchical-models.md  linear-regression.md
docs/viz/: anatomy.js  distributions.js  hmc.js  inline.js  metropolis.js  minis.js  monad.js  playground.js  smc.js
examples/: AGENTS.md  abc_inference.rs  advanced_distribution_patterns.rs  bayesian_coin_flip.rs  building_complex_models.rs  classification.rs  coin_flip_01_basic.rs  coin_flip_02_mcmc.rs  coin_flip_03_analytical.rs  coin_flip_04_scenarios.rs  coin_flip_05_advanced.rs  conjugate_beta_binomial.rs  custom_handlers.rs  debugging_models.rs  exponential_hazard.rs  fully_type_safe.rs  gaussian_mean.rs  gaussian_mixture.rs  hierarchical_models.rs  hierarchical_models_01_data.rs  hierarchical_models_02_pooling.rs  hierarchical_models_03_implementation.rs  hierarchical_models_04_diagnostics.rs  hierarchical_models_05_predictions.rs  improved_gaussian_mean.rs  linear_regression.rs  linear_regression_01_data.rs  linear_regression_02_model.rs  linear_regression_03_predictions.rs  linear_regression_04_diagnostics.rs  linear_regression_05_polynomial.rs  mixture_models.rs  mixture_models_01_data.rs  mixture_models_02_two_component.rs  mixture_models_03_bayesian.rs  mixture_models_04_model_selection.rs  mixture_models_05_clustering.rs  optimizing_performance.rs  production_deployment.rs  simple_mixture.rs  (+6 more)
scripts/: tutorial_examples.rs
src/: AGENTS.md  error.rs  lib.rs
src/core/: README.md  address.rs  distribution.rs  mod.rs  model.rs  numerical.rs
src/docs/core/: README.md  address.md  distribution.md  model.md
src/docs/macros/: README.md
src/docs/runtime/: README.md  handler.md  interpreters.md  memory.md  trace.md
src/inference/: README.md  abc.rs  diagnostics.rs  hmc.rs  mcmc_utils.rs  mh.rs  mod.rs  smc.rs  validation.rs  vi.rs
src/macros/: mod.rs
src/runtime/: README.md  handler.rs  interpreters.rs  memory.rs  mod.rs  trace.rs
tests/: AGENTS.md  abc_inference_tests.rs  advanced_runtime_tests.rs  analytical_validation.rs  comprehensive_error_tests.rs  core_tests.rs  diagnostics_tests.rs  distribution_tests.rs  end_to_end_workflows.rs  enhanced_error_handling_tests.rs  extended_distribution_tests.rs  f_dist_distributions.rs  f_dist_numerical.rs  f_docs_inference_examples.rs  f_docs_no_dead_module_refs.rs  f_hmc_discrete_uniform.rs  f_hmc_efficiency.rs  f_hmc_posterior.rs  f_mcmc_diagnostics.rs  f_mcmc_proposals.rs  f_runtime_audit.rs  f_smc_abc.rs  f_smc_smc.rs  f_tests_sampler_validation.rs  f_validate_coverage.rs  f_vi_regressions.rs  gen_refs.py  inference_integration.rs  inference_tests.rs  integration_examples.rs  layout_tests.rs  model_execution.rs  numerical_stability_tests.rs  numerical_utilities_tests.rs  property_tests.proptest-regressions  property_tests.rs  public_api_coverage.rs  public_api_validation.rs  runtime_interpreter_tests.rs  runtime_tests.rs  (+6 more)
(+23 files in other folders)
