[package]
name = "fugue-ppl"
version = "0.1.0"
edition = "2021"
# Finding FG-51: the README previously claimed "1.70+" with nothing pinning or
# verifying it. Verified empirically against real toolchains (not just
# clippy's `incompatible_msrv` lint, which agrees): rustc 1.70.0 actually
# fails to compile this crate for two independent reasons -- an `E0659`
# ambiguous-name error on `pub mod core` vs. the `core` extern-prelude crate
# (resolved by later rustc versions), and `usize::is_multiple_of` in
# `src/inference/abc.rs`, stable only since 1.87.0. rustc 1.87.0 compiles
# `[dependencies]` (the graph a downstream consumer actually pulls in)
# cleanly with zero `incompatible_msrv` findings anywhere in the crate.
# dev-dependencies (mdbook + plugins, criterion, proptest, ...) are NOT held
# to this floor -- they're maintainer tooling, not part of the published
# library -- so the MSRV CI job (.github/workflows/ci.yml) checks `--lib`
# only, against a temporarily dev-dependency-free manifest. See that job's
# comments for why.
rust-version = "1.87"
license = "MIT"
description = "Monadic PPL with numerically stable inference and comprehensive diagnostics."
readme = "README.md"
keywords = ["probability-monad", "ppl", "monad", "effects", "traces"]
categories = ["science", "mathematics"]
documentation = "https://docs.rs/fugue-ppl"
repository = "https://github.com/alexnodeland/fugue"


[lib]
name = "fugue"

[package.metadata.docs.rs]
# Enable all features for documentation
all-features = true
# Use nightly for better documentation features
rustdoc-args = ["--cfg", "docsrs"]


[dependencies]
# Core dependencies
rand = "0.8"
rand_distr = "0.4"
libm = "0.2"

[dev-dependencies]  
# CLI dependencies
clap = { version = "4", features = ["derive"] }
# Testing dependencies  
proptest = "1.0"
cargo-llvm-cov = "0.6.18"
# Benchmarking dependencies
criterion = { version = "0.5", features = ["html_reports"] }
# Documentation Dependencies
mdbook = "0.4.52"
mdbook-mermaid = "0.15.0"
mdbook-katex = "0.9.4"
mdbook-admonish = "1.20.0"
mdbook-linkcheck = "0.7.7"
mdbook-toc = "0.14.2"

[[bench]]
name = "mcmc_benchmarks"
harness = false

[[bench]]
name = "f_perf"
harness = false

[[bench]]
name = "sequence_vec"
harness = false
